# pyvosklivesubtitle

./: LICENSE  README.md  pyproject.toml  pysetup.bat  pysetup.sh  setup.cfg  setup.py
linux/: hook-streamlink.py  mypyinstaller.sh  pyvls.py  pyvls.pyw
mac/: mypyinstaller.sh  pyvls.pyw
pyvosklivesubtitle/: __init__.py
src/pyvosklivesubtitle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
win/: mypyinstaller.bat  pyvls.py  pyvls.pyw  pyvls.spec
