[build-system]
requires = [
	'setuptools>=61.0',
    'sounddevice>=0.4.4',
    'vosk>=0.3.44',
    'googletrans==4.0.0-rc1',
    'pysimplegui>=4.60.1',
]
build-backend = "setuptools.build_meta"

[project]
name = "pyvosklivesubtitle"
version = "0.0.4"
authors = [
  { name="Bot Bahlul", email="bot.bahlul@gmail.com" },
]
description = "A Python based desktop aplication that can RECOGNIZE any live streaming in 21 languages that supported by VOSK then TRANSLATE and display it as LIVE SUBTITLES"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/botbahlul/pyvosklivesubtitle"
"Bug Tracker" = "https://github.com/botbahlul/pyvosklivesubtitle/issues"